PROJECT(${AGROS_GRID})

INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/util)
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/3rdparty)

# set(CMAKE_MODULE_PATH ${CMAKE_HOME_DIRECTORY}/cmake)
message(${CMAKE_MODULE_PATH})
FIND_PACKAGE(LibSSH REQUIRED)

SET(SOURCES main.cpp
    connection.cpp
    browser.cpp)

SET(HEADERS connection.h
    browser.h)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${RESOURCES_RCC} ${RC_FILE})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SSH_LIBRARY} ${AGROS_UTIL} )
QT5_USE_MODULES(${PROJECT_NAME} Core Widgets Network Xml XmlPatterns WebKit WebKitWidgets)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

