PROJECT(solver_external_MUMPS C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake ${PROJECT_SOURCE_DIR}/../dealii/cmake)

# SET(DEBUG_FLAGS "-g")
# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${DEBUG_FLAGS}")

# Set global compiler parameters.
IF(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wno-deprecated")
ENDIF()
IF(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unsupported-friend")
  SET(CMAKE_EXE_LINKER_FLAGS "-Wl,-export-dynamic")
ENDIF()

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/../3rdparty/")

FIND_PACKAGE(MPI REQUIRED)
FIND_PACKAGE(MUMPS REQUIRED)
FIND_PACKAGE(LAPACK REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/../3rdparty/matio)
INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${MUMPS_INCLUDE_DIR})

SET(SOURCES main.cpp)

file(WRITE "${CMAKE_HOME_DIRECTORY}/../libs/${PROJECT_NAME}_seq.ext" "MUMPS - seq (external)\n\"%1/libs/solver_external_MUMPS\" -m \"%2\" -p \"%3\" -r \"%4\" -s \"%5\"")
file(WRITE "${CMAKE_HOME_DIRECTORY}/../libs/${PROJECT_NAME}_mpi.ext" "MUMPS - mpi (external)\nmpirun -np 4 \"%1/libs/solver_external_MUMPS\" -m \"%2\" -p \"%3\" -r \"%4\" -s \"%5\"")
#file(WRITE "${CMAKE_HOME_DIRECTORY}/../libs/${PROJECT_NAME}_mpi.ext" "MUMPS - mpi (external)\nmpirun -np 30 --host localhost,147.228.82.30 \"%1/libs/solver_external_MUMPS\" -m \"%2\" -p \"%3\" -r \"%4\" -s \"%5\"")

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MPI_LIBRARIES} ${MUMPS_LIBRARIES} ${LAPACK_LIBRARIES} gfortran)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/../libs)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

